--- a/spot/theme/Contact.html
+++ b/spot/theme/Contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>MAGIC - Paul Caillau</title>
+    <title>Contact</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,11 +39,11 @@
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	  </button>
-	  <a class="navbar-brand" href="test.html">M<i class="fa fa-circle"></i>GIC</a>
+	  <a class="navbar-brand" href="test.html">MAGIC</a>
 	</div>
 	<div class="navbar-collapse collapse">
 	  <ul class="nav navbar-nav navbar-right">
-	    <li><a href="about.html">About</a></li>
+	    <li><a href="about.html">A propos</a></li>
 	    <li><a href="Galerie.html">Galerie</a></li>
 	    <li><a href="Blog.html">Blog</a></li>
 	    <li class="active"><a href="Contact.html"><i class="fa fa-envelope-o"></i></a></li>
