--- a/spot/theme/Galerie.html
+++ b/spot/theme/Galerie.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="stylesheet" href="assets/css/blueimp-gallery.min.css">
 
-    <title>MAGIC - Paul Caillau</title>
+    <title>MAGIC - Galerie</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -41,11 +41,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="test.html">M<i class="fa fa-circle"></i>GIC</a>
+          <a class="navbar-brand" href="test.html">MAGIC</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">A propos</a></li>
 	    <li class="active"><a href="Galerie.html">Galerie</a></li>
 	    <li><a href="Blog.html">Blog</a></li>
 	    <li><a href="Contact.html"><i class="fa fa-envelope-o"></i></a></li>
@@ -81,27 +81,66 @@
 	
 	<div class="container w">
 		<div class="row centered">
-			<div class="col-lg-12 ">
+			<div class="col-lg-10 ">
 				<div id="links">
+
+
+	    <a href="assets/img/WebImage/magicPaul2.jpg" title="Why so serious?">
+		<img src="assets/img/WebImage/magicPaul2_preview.jpg" alt="Why so serious?">
+	    </a>
+	    <a href="assets/img/WebImage/floatingcigarette.jpg" title="What is floating?">
+		<img src="assets/img/WebImage/floatingcigarette_preview.jpg" alt="What is floating?">
+	    </a>
+	    <a href="assets/img/WebImage/fauteuils.jpg" title="Let's have a seat.">
+		<img src="assets/img/WebImage/fauteuils_preview.jpg" alt="Let's have a seat?">
+	    </a>
+	    <a href="assets/img/WebImage/magicPaul.jpg" title="I love ballon.">
+		<img src="assets/img/WebImage/magicPaul_preview.jpg" alt="I love ballon.">
+	    </a>
+	    <a href="assets/img/WebImage/Alex.jpg" title="Again? Oh shit!">
+		<img src="assets/img/WebImage/Alex_preview.jpg" alt="Again? Oh shit!">
+	    </a>
+	    <a href="assets/img/WebImage/magicPaul3.jpg" title="Look at this card.">
+		<img src="assets/img/WebImage/magicPaul3_preview.jpg" alt="Look at this card.">
+	    </a>
+	    <a href="assets/img/WebImage/TableHopping4.jpg" title="Abracadabra">
+		<img src="assets/img/WebImage/TableHopping4_preview.jpg" alt="Abracadabra">
+	    </a>
+	    <a href="assets/img/WebImage/floatingcigarette2.jpg" title="Cheese!">
+		<img src="assets/img/WebImage/floatingcigarette2_preview.jpg" alt="Cheese!">
+	    </a>
+	    <a href="assets/img/WebImage/GI_awards.jpg" title="What is that?">
+		<img src="assets/img/WebImage/GI_awards_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/TableHopping2.jpg" title="What is that?">
+		<img src="assets/img/WebImage/TableHopping2_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/Salle.jpg" title="What is that?">
+		<img src="assets/img/WebImage/Salle_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/Sourire.jpg" title="What is that?">
+		<img src="assets/img/WebImage/Sourire_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/TableHopping.jpg" title="What is that?">
+		<img src="assets/img/WebImage/TableHopping_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/PassionForCreation.jpg" title="What is that?">
+		<img src="assets/img/WebImage/PassionForCreation_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/carte_cachee.jpg" title="What is that?">
+		<img src="assets/img/WebImage/carte_cachee_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/TableHopping3.jpg" title="What is that?">
+		<img src="assets/img/WebImage/TableHopping3_preview.jpg" alt="What is that?">
+	    </a>
 
 	    <a href="assets/img/WebImage/Ballons2.jpg" title="We love Ballons">
 		<img src="assets/img/WebImage/Ballons2_preview.jpg" alt="We love Ballons">
 	    </a>
-	    <a href="assets/img/WebImage/magicPaul2.jpg" title="Why so serious?">
-		<img src="assets/img/WebImage/magicPaul2_preview.jpg" alt="Why so serious?">
+	    <a href="assets/img/WebImage/GI_awards2.jpg" title="What is that?">
+		<img src="assets/img/WebImage/GI_awards2_preview.jpg" alt="What is that?">
 	    </a>
-	    <a href="assets/img/WebImage/floatingcigarette.jpg" title="What is that?">
-		<img src="assets/img/WebImage/floatingcigarette_preview.jpg" alt="What is that?">
-	    </a>
-	    <a href="assets/img/WebImage/fauteuils.jpg" title="What is that?">
-		<img src="assets/img/WebImage/fauteuils_preview.jpg" alt="What is that?">
-	    </a>
-	    <a href="assets/img/WebImage/magicPaul.jpg" title="What is that?">
-		<img src="assets/img/WebImage/magicPaul_preview.jpg" alt="What is that?">
-	    </a>
-	    <a href="assets/img/WebImage/magicPaul3.jpg" title="What is that?">
-		<img src="assets/img/WebImage/magicPaul3_preview.jpg" alt="What is that?">
-	    </a>
+			
 				
 			</div> 
 		</div>
