--- a/spot/theme/Blog1.html
+++ b/spot/theme/Blog1.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SPOT - Free Bootstrap 3 Theme</title>
+    <title>Blog post</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -37,11 +37,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="test.html">M<i class="fa fa-circle"></i>GIC</a>
+          <a class="navbar-brand" href="test.html">MAGIC</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="about.html">About</a></li>
+            <li class="active"><a href="about.html">A propos</a></li>
 	    <li><a href="Galerie.html">Galerie</a></li>
   	    <li><a href="Blog.html">Blog</a></li>
 	    <li><a href="Contact.html"><i class="fa fa-envelope-o"></i></a></li>	
@@ -115,4 +115,4 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
-</html>h
+</html>
