--- a/spot/theme/Blog1.html
+++ b/spot/theme/Blog1.html
@@ -101,8 +101,8 @@
 		<br>
 		<br>
 			</div><!-- col-lg-8 -->	
-			<div class="col-md-4">
-				<img class="img-circle" src="assets/img/pic.jpg" width="110" height="110" alt="">
+			<div class="col-md-4 centered" >
+				<img class="img-circle" src="assets/img/Avatar.jpg" width="110" height="110" alt="">
 				<h4>Paul Caillau</h4>
 				<p>Passioné de magie</p>
 			</div><!-- col-lg-4 -->
