--- a/spot/theme/about.html
+++ b/spot/theme/about.html
@@ -63,13 +63,13 @@
 
 
 	<div class="container w">
-		<div class="row justify">
+		<div class="row centered">
 			<div class="col-sm-3">
 				<br><br>
-				<img class="img-circle" src="assets/img/pic.jpg" width="120" height="120" alt="">
+				<img class="img-circle" src="assets/img/Avatar.jpg" width="150" height="150" alt="">
 				<h4>Paul Caillau</h4>
 			</div><!-- col-lg-4 -->
-				<div class="col-lg-8">
+				<div class="col-lg-8 justify">
 				<p><br>Jeune magicien passionné et talentueux qui saura vous surprendre. Il se produit régulièrement lors de Galas, aussi bien en close-up que sur scène, un peu partout en France. Idéal pour ceux qui se laissent transporter dans le monde de l’illusion, mais aussi pour les sceptiques dont l’esprit cartésien sera mis à rude épreuve. Qui que vous soyez, vous adorerez les tours époustouflants qu’il vous réserve !<br><br></p>
 			</div><!-- col-lg-4 -->
 		</div><!-- container -->
