--- a/spot/theme/Galerie.html
+++ b/spot/theme/Galerie.html
@@ -81,7 +81,7 @@
 	
 	<div class="container w">
 		<div class="row centered">
-			<div class="col-lg-11 ">
+			<div class="col-lg-11">
 				<div id="links">
 
 
@@ -109,39 +109,37 @@
 	    <a href="assets/img/WebImage/floatingcigarette2.jpg" title="Cheese!">
 		<img src="assets/img/WebImage/floatingcigarette2_preview.jpg" alt="Cheese!">
 	    </a>
-	    <a href="assets/img/WebImage/GI_awards.jpg" title="What is that?">
-		<img src="assets/img/WebImage/GI_awards_preview.jpg" alt="What is that?">
+	    <a href="assets/img/WebImage/GI_awards.jpg" title="seems happy">
+		<img src="assets/img/WebImage/GI_awards_preview.jpg" alt="seems happy">
 	    </a>
-	    <a href="assets/img/WebImage/TableHopping2.jpg" title="What is that?">
-		<img src="assets/img/WebImage/TableHopping2_preview.jpg" alt="What is that?">
+	    <a href="assets/img/WebImage/TableHopping2.jpg" title="focus on these cards">
+		<img src="assets/img/WebImage/TableHopping2_preview.jpg" alt="focus on these cards">
 	    </a>
-	    <a href="assets/img/WebImage/Salle.jpg" title="What is that?">
-		<img src="assets/img/WebImage/Salle_preview.jpg" alt="What is that?">
+	    <a href="assets/img/WebImage/Salle.jpg" title="Venise">
+		<img src="assets/img/WebImage/Salle_preview.jpg" alt="Venise">
 	    </a>
-	    <a href="assets/img/WebImage/Sourire.jpg" title="What is that?">
-		<img src="assets/img/WebImage/Sourire_preview.jpg" alt="What is that?">
+	    <a href="assets/img/WebImage/Sourire.jpg" title="Smile">
+		<img src="assets/img/WebImage/Sourire_preview.jpg" alt="Smile">
 	    </a>
-	    <a href="assets/img/WebImage/TableHopping.jpg" title="What is that?">
-		<img src="assets/img/WebImage/TableHopping_preview.jpg" alt="What is that?">
+	    <a href="assets/img/WebImage/TableHopping.jpg" title="Well done">
+		<img src="assets/img/WebImage/TableHopping_preview.jpg" alt="Well done">
 	    </a>
-	    <a href="assets/img/WebImage/PassionForCreation.jpg" title="What is that?">
-		<img src="assets/img/WebImage/PassionForCreation_preview.jpg" alt="What is that?">
+	    <a href="assets/img/WebImage/PassionForCreation.jpg" title="Sur scène">
+		<img src="assets/img/WebImage/PassionForCreation_preview.jpg" alt="Sur scène">
 	    </a>
-	    <a href="assets/img/WebImage/carte_cachee.jpg" title="What is that?">
-		<img src="assets/img/WebImage/carte_cachee_preview.jpg" alt="What is that?">
+	    <a href="assets/img/WebImage/carte_cachee.jpg" title="Have a look">
+		<img src="assets/img/WebImage/carte_cachee_preview.jpg" alt="Have a look">
 	    </a>
-	    <a href="assets/img/WebImage/TableHopping3.jpg" title="What is that?">
-		<img src="assets/img/WebImage/TableHopping3_preview.jpg" alt="What is that?">
+	    <a href="assets/img/WebImage/TableHopping3.jpg" title="Do you see there?">
+		<img src="assets/img/WebImage/TableHopping3_preview.jpg" alt="Do you see there?">
 	    </a>
 
 	    <a href="assets/img/WebImage/Ballons2.jpg" title="We love Ballons">
 		<img src="assets/img/WebImage/Ballons2_preview.jpg" alt="We love Ballons">
 	    </a>
-	    <a href="assets/img/WebImage/GI_awards2.jpg" title="What is that?">
-		<img src="assets/img/WebImage/GI_awards2_preview.jpg" alt="What is that?">
-	    </a>
-			
-				
+	    <a href="assets/img/WebImage/GI_awards2.jpg" title="Let's do it!">
+		<img src="assets/img/WebImage/GI_awards2_preview.jpg" alt="Let's do it!">
+	    </a>	
 			</div> 
 		</div>
 	</div>
